--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- ✅ Report Output Section -->
         <section class="output-panel">
-          <h2>Your Report 😜</h2>
+          <h2>Your Report</h2>
           <p id="report-content">Your report will appear here...</p> <!-- ✅ Add this line -->
       </section>
     </main>
@@ -60,7 +60,7 @@
 
     <!-- ✅ Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="index.js" type="module" defer></script>
+    <script src="index.js" defer></script>
 </body>
 
 
