--- a/index.html
+++ b/index.html
@@ -17,51 +17,46 @@
     </header>
 
     <main>
-        <!-- ✅ Ticker Input Section -->
-        <section class="action-panel">
-            <form id="ticker-input-form">
-                <label for="ticker-input">
-                    Add up to 3 stock tickers below to get a super accurate stock predictions report👇
-                </label>
-                <div class="form-input-control">
-                    <input type="text" id="ticker-input" placeholder="MSFT">
-                    <button type="button" class="add-ticker-btn">
-                        <img src="images/add.svg" class="add-ticker-svg" alt="Add ticker">
-                    </button>
-                </div>
-            </form>
-            <p class="ticker-choice-display">
-                Your tickers will appear here...
-            </p>
-            <button class="generate-report-btn" type="button" disabled>
-                Generate Report
-            </button>
-            <p class="tag-line">Always correct 15% of the time!</p>
-        </section>
-
-        <!-- ✅ Loading Indicator (Hidden by Default) -->
-        <section class="loading-panel" style="display: none;">
-            <div class="loading-wrapper">
-                <img src="images/loader.svg" alt="Loading">
-                <p id="api-message">Querying Stocks API...</p>
-            </div>
-        </section>
-
-        <!-- ✅ Report Output Section -->
-        <section class="output-panel">
-          <h2>Your Report</h2>
-          <p id="report-content">Your report will appear here...</p> <!-- ✅ Add this line -->
+      <section class="action-panel">
+          <form id="ticker-input-form">
+              <label for="ticker-input">
+                  Add up to 3 stock tickers below to get a super accurate stock predictions report👇
+              </label>
+              <div class="form-input-control">
+                  <input type="text" id="ticker-input" placeholder="MSFT">
+                  <button type="button" class="add-ticker-btn">
+                      <img src="images/add.svg" class="add-ticker-svg" alt="Add ticker">
+                  </button>
+              </div>
+          </form>
+          <p class="ticker-choice-display">
+              Your tickers will appear here...
+          </p>
+          <button class="generate-report-btn" type="button" disabled>
+              Generate Report
+          </button>
+          <p class="tag-line">Always correct 15% of the time!</p>
       </section>
-    </main>
 
-    <footer>
-        &copy; This is not real financial advice!
-    </footer>
+      <section class="loading-panel" style="display: none;">
+          <div class="loading-wrapper">
+              <img src="images/loader.svg" alt="Loading">
+              <p id="api-message">Querying Stocks API...</p>
+          </div>
+      </section>
 
-    <!-- ✅ Scripts -->
+      <section class="output-panel" style="display: none;">
+          <h2>Your Report</h2>
+          <p id="report-content">Your report will appear here...</p>
+      </section>
+  </main>
+
+  <footer>
+      &copy; This is not real financial advice!
+  </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="index.js" defer></script>
 </body>
-
 
 </html>
